------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6 and 1.7, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

03-Dec-2011 Mark Dexter
 ^ [#26134] Menu item parameter "Note"

03-Dec-2011 Jean-Marie Simonet
 # [#27196] Unable to add a trashed Content Language again. Thanks Michael

03-Dec-2011 Christophe Demko
 # [#27255] Fix some E_STRICT warnings
 # [#26778] Update TinyMCE to 3.4.7

02-Dec-2011 Christophe Demko
 ^ Changing file modes
 # [#27248] Default Beez templates hard coded paths
 - [#27252] Remove calls to import() that are now handled by the platform

30-Nov-2011 Jean-Marie Simonet
# [#27258] Wrong # cols in tfoot of Installer view from com_languages. Thanks Denise
$ Adding new strings from en-GB.jhtmldate.ini to en-GB.lib_joomla.ini

28-Nov-2011 Christophe Demko
 # [#25291] Front end clear link for media field and file field closes form
 # [#27141] Adding the possibility to automatically load (un)compressed css and js file whether debug in on or off
 # [#25643] JComponentHelper::renderComponent assumes $app variable unchanged
 # [#24919] JHtml::_('grid.boolean', $i, $value) should add void(0) if not given a task
 # [#27102] Collection updater not working in Joomla! 1.7
 # [#24796] Error removing styles in uninstall function
 # [#27201] More syncing with platform 11.3
 # [#26805] Update MooTools to version 1.4 and SqueezeBox to 1.3
 # [#27197] Backport the autoloader from the platform
 # [#26493] Class 'JRequest' not found in session.php
 # [#27184] Fatal error: Call to undefined method JDocumentFeed::getHeadData() in /home/content/53/8127853/html/libraries/joomla/cache/cache.php
 # [#26508] Wrong default format in JParameter->bind()
 # [#25957] wrong behaviour of libraries/joomla/application/module/JModuleHelper:moduleCache()