@@ -18,6 +18,8 @@ COM_USERS_CONFIG_FIELD_GUEST_USER_GROUP_DESC="The default Group that will be app
 COM_USERS_CONFIG_FIELD_GUEST_USER_GROUP_LABEL="Guest User Group"
 COM_USERS_CONFIG_FIELD_MAILBODY_SUFFIX_DESC="This gets added after the mail text."
 COM_USERS_CONFIG_FIELD_MAILBODY_SUFFIX_LABEL="Mailbody Suffix"
+COM_USERS_CONFIG_FIELD_MAILTOADMIN_DESC="If 'New User Account Activation' is set to 'None' or 'Self', allows or not a notification mail to be sent to administrators."
+COM_USERS_CONFIG_FIELD_MAILTOADMIN_LABEL="Notification Mail to Administrators"
 COM_USERS_CONFIG_FIELD_NEW_USER_TYPE_DESC="The default group that will be applied to New Users Registering via the frontend."
 COM_USERS_CONFIG_FIELD_NEW_USER_TYPE_LABEL="New User Registration Group"
 COM_USERS_CONFIG_FIELD_SUBJECT_PREFIX_DESC="This gets added in front of each mail subject."
